--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "jamaica-whatsapp-bot",
+  "name": "jamaica-bot",
   "version": "1.0.0",
-  "description": "بوت واتساب جمايكا - بوت عربي متعدد الأوامر والمميزات",
-  "main": "jamaica.js",
+  "description": "بوت واتساب جمايكا",
+  "main": "index.js",
   "scripts": {
-    "start": "node jamaica.js"
+    "start": "node index.js"
   },
-  "keywords": [
-    "whatsapp-bot",
-    "jamaica",
-    "termux",
-    "bot",
-    "arabic"
-  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/your-username/jamaica-bot.git"
+  },
+  "keywords": [],
   "author": "روني البحيره",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/your-username/jamaica-bot/issues"
+  },
+  "homepage": "https://github.com/your-username/jamaica-bot#readme",
   "dependencies": {
-    "axios": "^1.6.0",
-    "baileys": "^6.5.0",
+    "@whiskeysockets/baileys": "^6.5.0",
     "chalk": "^5.3.0",
-    "fs-extra": "^11.2.0",
-    "moment": "^2.29.4",
-    "node-fetch": "^3.3.2",
-    "qrcode-terminal": "^0.12.0"
+    "figlet": "^1.6.0"
   }
 }
